--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <frame src = "chart2.html"></frame>
         <frame src = "chart4.html"></frame>
 </frameset> -->
-<iframe src = "chart/chart.html">a</iframe>
-<iframe src = "chart/chart2.html">a</iframe>
-<iframe src = "chart/chart5.html">a</iframe>
+<iframe src = "./chart/chart.html">a</iframe>
+<iframe src = "./chart/chart2.html">a</iframe>
+<iframe src = "./chart/chart5.html">a</iframe>
 </html>
