--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
         <frame src = "chart2.html"></frame>
         <frame src = "chart4.html"></frame>
 </frameset> -->
-<iframe src = "./chart/chart.html">a</iframe>
-<iframe src = "./chart/chart2.html">a</iframe>
-<iframe src = "./chart/chart5.html">a</iframe>
+<iframe src = "./chart/chart.html" width="100%" height="500px">a</iframe>
+<!-- chartjs 사용 -->
+<iframe src = "./chart/chart2.html" width="100%" height="500px">a</iframe>
+<!-- echart 사용 -->
+<iframe src = "./chart/chart5.html" width="100%" height="500px">a</iframe>
+<!-- d3 사용 -->
 </html>
